--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -119,6 +119,13 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
 .sidebar {
   display: none;
 }
+#sidebar {
+	background-color: #f5f5f5;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    z-index: 199;
+}
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -132,9 +139,33 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
+	transition: left 0.3s ease-in-out 0s;
   }
 }
-
+@media (max-width: 768px) {
+	#sidebar {
+		width: 230px !important;
+	}
+	
+	.toggle-sidebar {
+		float: left;
+		left: -10px;
+		background-color: #f5f5f5;
+		border-radius: 0;
+		float: left;
+		top: -4px;
+	}
+	
+	.toggle-sidebar-active {
+		left: 215px;
+		transition: left 0.3s ease-in-out 0s;
+	}
+	
+	#sidebar-container {
+		position: fixed;
+		z-index: 100;
+	}
+}
 /* Sidebar navigation */
 .nav-sidebar {
   margin-right: -21px; /* 20px padding + 1px border */
@@ -158,6 +189,7 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
  */
 .row .dark {
 	background-color: #393939;
+	color: #fff;
 }
 .main {
 	padding: 20px;
