--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+    padding-top: 50px;
 }
 
 #main-content .dark-box {
@@ -16,27 +16,28 @@ body {
     width: 50%;
 }
 .tocify-extend-page {
-	background-color: #393939;
-	margin-left: 58.35%;
+    background-color: #393939;
+    margin-left: 58.35%;
 }
 @media (max-width: 1200px) {
-  .dark-box {
-    display: none; }
-  .row .dark  {
-	padding: 20px;
-	margin: 20px;
-  }
-  .tocify-extend-page {
-	background-color: #fff;
-  }
+    .dark-box {
+        display: none; 
+    }
+    .row .dark  {
+        padding: 20px;
+        margin: 20px;
+    }
+    .tocify-extend-page {
+        background-color: #fff;
+    }
 }
 /*
  * Global add-ons
  */
 
 .sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
 }
 
 /*
@@ -44,24 +45,24 @@ body {
  * Hide default border to remove 1px line.
  */
 .navbar-fixed-top {
-  border: 0;
+    border: 0;
 }
 
 .navbar-inverse {
-	background-color: #8892BF;
-	color: #fffc64;
-	border-bottom: 4px solid #fffc64;
-	border-top: 0;
+    background-color: #8892BF;
+    color: #fffc64;
+    border-bottom: 4px solid #fffc64;
+    border-top: 0;
 }
 
 a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand {
-	color: #fffc64;
+    color: #fffc64;
 }
 
 .navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
-	background-color: #fffc64;
-	color: #8892BF;
+    background-color: #fffc64;
+    color: #8892BF;
 }
 
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form,
@@ -70,23 +71,23 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
 }
 
 .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-	background-color: #666666;
+    background-color: #666666;
 }
 /*
  * Sidebar
  */
 .nav > li > a{
-	color: #8892bf;
+    color: #8892bf;
 }
 .nav > li.active > a {
-	background-color: #8892bf;
-	color: #fffc64;
+    background-color: #8892bf;
+    color: #fffc64;
 }
 .nav > li.active > a:focus, .nav > li.active > a:hover {
-	color: #8892bf;
+    color: #8892bf;
 }
 .nav > li > a:focus, .nav > li > a:hover {
-	background-color: #fffc64;
+    background-color: #fffc64;
 }
 #toc {
     font-size: 13px;
@@ -100,7 +101,7 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
 }
 #toc .tocify-subheader .tocify-item {
     margin-left: 2.5rem;
-	font-size: 12px;
+    font-size: 12px;
 }
 
  /*
@@ -117,70 +118,70 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
 
 /* Hide for mobile, show later */
 .sidebar {
-  display: none;
+    display: none;
 }
 #sidebar {
-	background-color: #f5f5f5;
+    background-color: #f5f5f5;
     height: 100%;
     left: 0;
     position: fixed;
     z-index: 199;
 }
 @media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-	transition: left 0.3s ease-in-out 0s;
-  }
+    .sidebar {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        padding: 20px;
+        overflow-x: hidden;
+        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+        background-color: #f5f5f5;
+        border-right: 1px solid #eee;
+        transition: left 0.3s ease-in-out 0s;
+    }
 }
 @media (max-width: 768px) {
-	#sidebar {
-		width: 230px !important;
-	}
-	
-	.toggle-sidebar {
-		float: left;
-		left: -10px;
-		background-color: #f5f5f5;
-		border-radius: 0;
-		float: left;
-		top: -4px;
-	}
-	
-	.toggle-sidebar-active {
-		left: 215px;
-		transition: left 0.3s ease-in-out 0s;
-	}
-	
-	#sidebar-container {
-		position: fixed;
-		z-index: 100;
-	}
+    #sidebar {
+        width: 230px !important;
+    }
+
+    .toggle-sidebar {
+        float: left;
+        left: -10px;
+        background-color: #f5f5f5;
+        border-radius: 0;
+        float: left;
+        top: -4px;
+    }
+
+    .toggle-sidebar-active {
+        left: 215px;
+        transition: left 0.3s ease-in-out 0s;
+    }
+
+    #sidebar-container {
+        position: fixed;
+        z-index: 100;
+    }
 }
 /* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
+    margin-right: -21px;
+    margin-bottom: 20px;
+    margin-left: -20px;
 }
 .nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
+    color: #fff;
+    background-color: #428bca;
 }
 
 
@@ -188,20 +189,20 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
  * Main content
  */
 .row .dark {
-	background-color: #393939;
-	color: #fff;
+    background-color: #393939;
+    color: #fff;
 }
 .main {
-	padding: 20px;
+    padding: 20px;
 }
 @media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
+    .main {
+        padding-right: 40px;
+        padding-left: 40px;
+    }
 }
 .main .page-header {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 
@@ -210,16 +211,34 @@ a, .navbar-inverse a, .navbar-inverse .navbar-nav > li > a, .navbar-inverse .nav
  */
 
 .placeholders {
-  margin-bottom: 30px;
-  text-align: center;
+    margin-bottom: 30px;
+    text-align: center;
 }
 .placeholders h4 {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 .placeholder {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 .placeholder img {
-  display: inline-block;
-  border-radius: 50%;
+    display: inline-block;
+    border-radius: 50%;
 }
+
+/*
+ * Colorful!
+ */
+ 
+pre { 
+    background-color: #393939;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: #bdae9d;
+}
+.f, pre { color: #bdae9d; } 
+.b { color: #37a3ed; }
+.w { color: #ffffff; }
+.gd { color: #e5c138; }
+.gn { color: #80ff00; }
+.gr { color: #888a85; }
+.p { color: #ff0080; }
